XMLtoCSV/objects/unpackaged/objects/Samples_State_Credential_Settings_vod__c.object
<CustomObject>
    <description>The Samples State Settings object provides the ability to manage the list of Controlled Substance Schedules that Accounts are able to receive based upon their credentials.  In order for an Account to receive a Controlled Substance in a given State, a record must exist that matches the State, Credential and Schedule of Controlled Substance within this object.</description>
    <fields>
        <fullName>Allowed_Schedules_vod__c</fullName>
        <description>The Allowed Schedules field contains a comma-delimited list of Schedules that are allowed for the given State and Credential.</description>
        <label>Allowed Schedules</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaborative_Relationship_Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not a collaborative agreement between a midlevel practitioner and a supervising physician is required for a particular state and credential combination. Used to determine if the Supervising Physician picklist field is rendered on the Call Report.</description>
        <label>Collaborative Relationship Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>Defines the Country in which the list of Restricted Products and corresponding Account Credential are not permitting to be sampled to an Account. The values stored in the Country field must match the values stored in the Country field on the Address object.</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential_vod__c</fullName>
        <description>The Credential field contains the Account Credential value that is able to receive the listed Schedules of Controlled Substance for the given State.  This value must match the Credential field on the Account object.</description>
        <label>Credential</label>
        <picklist>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>The External Id field is leveraged to allow the upserting of records as well as to enforce uniqueness.  This value is set by a Trigger for each record and is equal to “[State_vod]” &amp; “_” &amp; “[Credential_vod]”</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Restricted_Products_vod__c</fullName>
        <description>Field used to hold restricted products for a particular state and credential combination.
Format should be Double semi-colon delimited list of Product Names. 
These will be textual Product Catalog records of type = Detail. 
For example, Cholecap;;Labrinone.</description>
        <label>Restricted Products</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>The State field defines the State in which the list of Controlled Substance Schedules and corresponding Account Credential are allowed to be received for an Account.  The values stored in the State field must match the values stored in the State field on the Address object.</description>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Samples State Credential Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>State_vod__c</columns>
        <columns>Credential_vod__c</columns>
        <columns>Allowed_Schedules_vod__c</columns>
        <columns>External_Id_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SSCS-{000000}</displayFormat>
        <label>Samples State Credentials Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Samples State Credential Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AllowedSchedules_CollabRelations_vod</fullName>
        <active>true</active>
        <description>Allowed Schedules and Collaborative Relationships cannot be defined in the same record.</description>
        <errorConditionFormula>AND(Collaborative_Relationship_Required_vod__c = True, NOT(ISBLANK(Allowed_Schedules_vod__c)))</errorConditionFormula>
        <errorMessage>Cannot define Allowed Schedules and Collaborative Relationships in the same record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllowedSchedules_NoCountry</fullName>
        <active>true</active>
        <description>Allowed Schedules is limited to states, and cannot be defined for a Country.</description>
        <errorConditionFormula>IF(!ISBLANK( Allowed_Schedules_vod__c) , Country_vod__c &lt;&gt; null, FALSE )</errorConditionFormula>
        <errorMessage>Cannot define Allowed Schedules for a Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AllowedSchedules_RestrictedProducts</fullName>
        <active>true</active>
        <description>Allowed Schedules and Restricted Products cannot be defined in the same record.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Allowed_Schedules_vod__c)), NOT(ISBLANK(Restricted_Products_vod__c)))</errorConditionFormula>
        <errorMessage>Cannot define Allowed Schedules and Restricted Products in the same record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CollabRelationships_RestrictedProds_vod</fullName>
        <active>true</active>
        <description>Collaborative Relationships and Restricted Products cannot be defined in the same record.</description>
        <errorConditionFormula>AND(Collaborative_Relationship_Required_vod__c = True, NOT(ISBLANK(Restricted_Products_vod__c)))</errorConditionFormula>
        <errorMessage>Cannot define Collaborative Relationships and Restricted Products in the same record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CollaborativeRelationships_NoCountry_vod</fullName>
        <active>true</active>
        <description>Collaborative Relationships are limited to states, and cannot be defined for a Country.</description>
        <errorConditionFormula>AND(Collaborative_Relationship_Required_vod__c = True, NOT(ISBLANK(Country_vod__c)))</errorConditionFormula>
        <errorMessage>Cannot define Collaborative Relationships for a Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_or_Country</fullName>
        <active>true</active>
        <description>State and Country restrictions cannot be defined in the same record.</description>
        <errorConditionFormula>IF(ISBLANK(State_vod__c) , Country_vod__c = null,  Country_vod__c &lt;&gt; null)</errorConditionFormula>
        <errorMessage>Record can only be created for a state or a country.</errorMessage>
    </validationRules>
</CustomObject>